--- a/Notebooks/GenCode_Explore_207.ipynb
+++ b/Notebooks/GenCode_Explore_207.ipynb
@@ -53,7 +53,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "eDgS-z1tL6Q2",
-        "outputId": "545a2713-c7e5-4728-818d-dced9c0a833e"
+        "outputId": "86099fe2-a104-4458-962b-5b0001b85b5f"
       },
       "source": [
         "import time \n",
@@ -63,12 +63,12 @@
         "    print(s)\n",
         "show_time()"
       ],
-      "execution_count": 1,
+      "execution_count": 36,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "2021-06-08 18:07:09 UTC\n"
+            "2021-06-08 18:28:13 UTC\n"
           ],
           "name": "stdout"
         }
@@ -81,7 +81,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "tckHr4SuL6Q5",
-        "outputId": "5e90a463-df09-408b-df2f-8f257aee6001"
+        "outputId": "1473c5d3-405d-40ab-c4a5-b09f65c1cc5f"
       },
       "source": [
         "import numpy as np\n",
@@ -100,10 +100,10 @@
         "    s = requests.get('https://raw.githubusercontent.com/ShepherdCode/Soars2021/master/SimTools/RNA_describe.py')\n",
         "    with open('RNA_describe.py', 'w') as f:\n",
         "      f.write(s.text)  # writes to cloud local, delete the file later?\n",
-        "    from RNA_describe import *\n",
         "    s = requests.get('https://raw.githubusercontent.com/ShepherdCode/Soars2021/master/SimTools/Plot_Generator.py')\n",
         "    with open('Plot_Generator.py', 'w') as f:\n",
         "      f. write(s.text)\n",
+        "    from RNA_describe import *\n",
         "    from Plot_Generator import *\n",
         "except:\n",
         "    print(\"CoLab not working. On my PC, use relative paths.\")\n",
@@ -119,13 +119,13 @@
         "if not assert_imported_RNA_describe():\n",
         "    print(\"ERROR: Cannot use RNA_describe.\")"
       ],
-      "execution_count": 2,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "On Google CoLab, mount cloud-local file, get our code from GitHub.\n",
-            "Mounted at /content/drive/\n"
+            "Drive already mounted at /content/drive/; to attempt to forcibly remount, call drive.mount(\"/content/drive/\", force_remount=True).\n"
           ],
           "name": "stdout"
         }
@@ -140,7 +140,7 @@
         "PC_FILENAME='gencode.v38.pc_transcripts.fa.gz'\n",
         "NC_FILENAME='gencode.v38.lncRNA_transcripts.fa.gz'"
       ],
-      "execution_count": 3,
+      "execution_count": 38,
       "outputs": []
     },
     {
@@ -193,7 +193,7 @@
         "    df=pd.concat((df1,df2,df3,df4),axis=1)\n",
         "    return df"
       ],
-      "execution_count": 4,
+      "execution_count": 39,
       "outputs": []
     },
     {
@@ -217,7 +217,7 @@
         "        print(\"mean longest ORF length:\",int(mean_max_orf),\"+/-\",int(std_max_orf))\n",
         "    return mean_max_orf"
       ],
-      "execution_count": 5,
+      "execution_count": 40,
       "outputs": []
     },
     {
@@ -239,7 +239,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FwwunxFxL6Q-",
-        "outputId": "ac21e37f-2bc1-4e13-c99f-ca04fa162e19"
+        "outputId": "3fa70066-c43d-4bdc-9830-526c6266e2df"
       },
       "source": [
         "PC_FULLPATH=DATAPATH+PC_FILENAME\n",
@@ -252,16 +252,16 @@
         "print(\"NC seqs loaded:\",len(ncdf))\n",
         "show_time()"
       ],
-      "execution_count": 6,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "2021-06-08 18:07:28 UTC\n",
+            "2021-06-08 18:28:14 UTC\n",
             "PC seqs loaded: 106143\n",
-            "2021-06-08 18:07:33 UTC\n",
+            "2021-06-08 18:28:18 UTC\n",
             "NC seqs loaded: 48752\n",
-            "2021-06-08 18:07:35 UTC\n"
+            "2021-06-08 18:28:20 UTC\n"
           ],
           "name": "stdout"
         }
@@ -274,21 +274,23 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7iW7zf4pL6Q_",
-        "outputId": "6bd8a272-f6ec-4082-c6d0-50f0222fd6cb"
+        "outputId": "626048d0-7520-4740-9474-b07da978e81f"
       },
       "source": [
         "print(\"Sorting PC...\")\n",
         "pcdf.sort_values('seqlen', ascending=True, inplace=True)\n",
         "print(\"Sorting NC...\")\n",
-        "ncdf.sort_values('seqlen', ascending=True, inplace=True)"
+        "ncdf.sort_values('seqlen', ascending=True, inplace=True)\n",
+        "show_time()"
       ],
-      "execution_count": 7,
+      "execution_count": 42,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Sorting PC...\n",
-            "Sorting NC...\n"
+            "Sorting NC...\n",
+            "2021-06-08 18:28:20 UTC\n"
           ],
           "name": "stdout"
         }
@@ -304,14 +306,9 @@
         "# TO DO: choose length thresholds and apply to PC and NC RNA.\n",
         "# For example: 200, 400, 800, 1600, 3200, 6400 (e.g. 200-399, etc.)\n",
         "#mask = (ncdf['sequence'].str.len() < 1000)\n",
-        "#subset = ncdf.loc[mask]\n",
-        "\n",
-        "# Here is one way to extract a list from a dataframe. \n",
-        "#mylist=subset['sequence'].tolist()\n",
-        "\n",
-        "#TODO: filter out sequences less than 200 here?"
+        "#subset = ncdf.loc[mask]"
       ],
-      "execution_count": 8,
+      "execution_count": 43,
       "outputs": []
     },
     {
@@ -334,7 +331,7 @@
         "def subset_list_by_len_bounds(input_list, min_len, max_len):\n",
         "  return list(filter(lambda x: len(x) > min_len and len(x) < max_len, input_list))"
       ],
-      "execution_count": 9,
+      "execution_count": 44,
       "outputs": []
     },
     {
@@ -344,9 +341,9 @@
       },
       "source": [
         "bins = [(200, 400), (400, 800), (800, 1600), (1600, 3200), (3200, 6400), (6400, 12800), (12800, 25600), (25600, 51200)]\n",
-        "num_bins = len(bins)"
+        "NUM_BINS = len(bins)"
       ],
-      "execution_count": 10,
+      "execution_count": 45,
       "outputs": []
     },
     {
@@ -356,7 +353,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "03eoMss5AIop",
-        "outputId": "eff4c05c-93a4-42bd-8bfa-0f1f5efd9cca"
+        "outputId": "cb361be4-9188-4fb7-e925-a1f0eefd2405"
       },
       "source": [
         "import matplotlib.pyplot as plt\n",
@@ -365,7 +362,7 @@
         "#Bin the RNA sequences\n",
         "binned_pc_sequences = []\n",
         "binned_nc_sequences = []\n",
-        "for i in range(0, num_bins):\n",
+        "for i in range(0, NUM_BINS):\n",
         "  bin = bins[i]\n",
         "  binned_pc_sequences.append([])\n",
         "  binned_nc_sequences.append([])\n",
@@ -373,12 +370,12 @@
         "  binned_nc_sequences[i] = subset_list_by_len_bounds(ncdf['sequence'].tolist(), bin[0], bin[1])\n",
         "show_time()"
       ],
-      "execution_count": 11,
+      "execution_count": 46,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "2021-06-08 18:07:36 UTC\n"
+            "2021-06-08 18:28:21 UTC\n"
           ],
           "name": "stdout"
         }
@@ -402,7 +399,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "TMMnTdSiL6RD",
-        "outputId": "6614c5c9-2691-494b-c220-a207db7b90a9"
+        "outputId": "b45fb07c-00df-45d5-df82-66263f6cb168"
       },
       "source": [
         "pc_max_len_data = []\n",
@@ -415,7 +412,7 @@
         "\n",
         "oc = ORF_counter()\n",
         "\n",
-        "for bin_num in range(0, num_bins):\n",
+        "for bin_num in range(0, NUM_BINS):\n",
         "  #Gather protein-coding sequence data\n",
         "  pc_max_len_data.append([])\n",
         "  pc_max_cnt_data.append([])\n",
@@ -437,12 +434,12 @@
         "    nc_contain_data[bin_num].append(oc.count_contained_orfs())\n",
         "show_time()"
       ],
-      "execution_count": 12,
+      "execution_count": 47,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "2021-06-08 18:08:59 UTC\n"
+            "2021-06-08 18:29:43 UTC\n"
           ],
           "name": "stdout"
         }
@@ -468,13 +465,17 @@
         "def mean(data):\n",
         "  return sum(data) / len(data)"
       ],
-      "execution_count": 13,
+      "execution_count": 48,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "M6SBWyf6HwIZ"
+        "id": "M6SBWyf6HwIZ",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f4b6f810-72ab-41f3-d246-f93503df1830"
       },
       "source": [
         "#Get the means of all of the data\n",
@@ -484,16 +485,25 @@
         "mean_nc_max_len_data = []\n",
         "mean_nc_max_cnt_data = []\n",
         "mean_nc_contain_data = []\n",
-        "for i in range(0, num_bins):\n",
+        "for i in range(0, NUM_BINS):\n",
         "  mean_pc_max_len_data.append(mean(pc_max_len_data[i]))\n",
         "  mean_pc_max_cnt_data.append(mean(pc_max_cnt_data[i]))\n",
         "  mean_pc_contain_data.append(mean(pc_contain_data[i]))\n",
         "  mean_nc_max_len_data.append(mean(nc_max_len_data[i]))\n",
         "  mean_nc_max_cnt_data.append(mean(nc_max_cnt_data[i]))\n",
-        "  mean_nc_contain_data.append(mean(nc_contain_data[i]))"
+        "  mean_nc_contain_data.append(mean(nc_contain_data[i]))\n",
+        "show_time()"
       ],
-      "execution_count": 14,
-      "outputs": []
+      "execution_count": 49,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "2021-06-08 18:29:43 UTC\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -513,22 +523,22 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "K3xZCQfU8-yh",
-        "outputId": "5a747a7c-aaef-418f-b4e9-e252f4cb0005"
+        "outputId": "d7c96906-e80b-4510-e42e-4061e747e232"
       },
       "source": [
         "pc_bin_sizes = []\n",
         "nc_bin_sizes = []\n",
-        "for i in range(0, num_bins):\n",
+        "for i in range(0, NUM_BINS):\n",
         "  pc_bin_sizes.append(len(binned_pc_sequences[i]))\n",
         "  nc_bin_sizes.append(len(binned_nc_sequences[i]))\n",
         "show_time()"
       ],
-      "execution_count": 15,
+      "execution_count": 50,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "2021-06-08 18:08:59 UTC\n"
+            "2021-06-08 18:29:44 UTC\n"
           ],
           "name": "stdout"
         }
@@ -567,7 +577,7 @@
         "        count += 1\n",
         "  return count\n"
       ],
-      "execution_count": 16,
+      "execution_count": 51,
       "outputs": []
     },
     {
@@ -577,83 +587,30 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "a4huROzBJdLI",
-        "outputId": "78bbea1d-0543-4311-8059-a3de35c2ecd6"
+        "outputId": "2084d909-bfd6-4a1a-84f3-c4c0d46baacc"
       },
       "source": [
         "pc_no_orf_count = []\n",
         "nc_no_orf_count = []\n",
-        "for bin in bins:\n",
-        "  pc_no_orf_count.append(count_constraint_valid_sequences(pcdf, bin[0], bin[1], 0, 0))\n",
-        "  nc_no_orf_count.append(count_constraint_valid_sequences(ncdf, bin[0], bin[1], 0, 0))\n",
-        "show_time()"
-      ],
-      "execution_count": 17,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "2021-06-08 18:10:25 UTC\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "stTZ8Rf-ewlV",
-        "outputId": "4b8675d9-f83a-4e8d-e6e6-c337f9243547"
-      },
-      "source": [
         "pc_max_orf_len_less_than_100 = []\n",
         "nc_max_orf_len_less_than_100 = []\n",
         "for bin in bins:\n",
+        "  pc_no_orf_count.append(count_constraint_valid_sequences(pcdf, bin[0], bin[1], 0, 0))\n",
+        "  nc_no_orf_count.append(count_constraint_valid_sequences(ncdf, bin[0], bin[1], 0, 0))\n",
         "  pc_max_orf_len_less_than_100.append(count_constraint_valid_sequences(pcdf, bin[0], bin[1], 0, 100))\n",
         "  nc_max_orf_len_less_than_100.append(count_constraint_valid_sequences(ncdf, bin[0], bin[1], 0, 100))\n",
         "show_time()"
       ],
-      "execution_count": 18,
+      "execution_count": 52,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "2021-06-08 18:11:51 UTC\n"
+            "2021-06-08 18:32:35 UTC\n"
           ],
           "name": "stdout"
         }
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "xkVupLL4XdrR"
-      },
-      "source": [
-        "###Prepare data for CDF plot of sequence lengths\n",
-        "\n",
-        "---"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "upxNKrzcXqns"
-      },
-      "source": [
-        "pc_seqs = pcdf['sequence'].tolist()\n",
-        "nc_seqs = pcdf['sequence'].tolist()\n",
-        "pc_sequence_lengths = []\n",
-        "nc_sequence_lengths = []\n",
-        "for seq in pc_seqs:\n",
-        "  pc_sequence_lengths.append(len(seq))\n",
-        "for seq in nc_seqs:\n",
-        "  nc_sequence_lengths.append(len(seq))"
-      ],
-      "execution_count": 19,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -674,7 +631,7 @@
           "height": 1000
         },
         "id": "8GzgZJXqTPz1",
-        "outputId": "88a04011-a23f-476b-fa64-a9608510fcfe"
+        "outputId": "0ec5a787-aa3f-4c93-e8a0-286971e37a1a"
       },
       "source": [
         "#Generate x-axis labels\n",
@@ -731,7 +688,7 @@
         "pg.set_text('lncRNA Mean Number of Contained ORFs', 'Sequence Length Ranges', '', x_axis_labels, [''])\n",
         "pg.heatmap([mean_nc_contain_data])"
       ],
-      "execution_count": 20,
+      "execution_count": 53,
       "outputs": [
         {
           "output_type": "display_data",
@@ -941,7 +898,7 @@
       "source": [
         ""
       ],
-      "execution_count": 20,
+      "execution_count": 53,
       "outputs": []
     }
   ]
