Update plot_generator.py usage with fixed naming convention.

--- a/Notebooks/GenCode_Explore_208.ipynb
+++ b/Notebooks/GenCode_Explore_208.ipynb
@@ -53,7 +53,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "eDgS-z1tL6Q2",
-        "outputId": "fc344e07-ebe9-4577-ce10-d3975a196416"
+        "outputId": "d9185ea8-fd87-4794-d03c-dfcd42a081a9"
       },
       "source": [
         "import time \n",
@@ -68,7 +68,7 @@
         {
           "output_type": "stream",
           "text": [
-            "2021-06-09 14:09:33 UTC\n"
+            "2021-06-09 14:38:11 UTC\n"
           ],
           "name": "stdout"
         }
@@ -81,7 +81,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "tckHr4SuL6Q5",
-        "outputId": "f664b231-e3a6-4358-b684-42b7f91a4358"
+        "outputId": "500cdf71-e2f3-4555-c02c-b64901e6dfee"
       },
       "source": [
         "import numpy as np\n",
@@ -103,12 +103,12 @@
         "    s = requests.get('https://raw.githubusercontent.com/ShepherdCode/Soars2021/master/SimTools/GenCodeTools.py')\n",
         "    with open ('GenCodeTools.py', 'w') as f:\n",
         "      f.write(s.text)\n",
-        "    s = requests.get('https://raw.githubusercontent.com/ShepherdCode/Soars2021/master/SimTools/Plot_Generator.py')\n",
-        "    with open('Plot_Generator.py', 'w') as f:\n",
+        "    s = requests.get('https://raw.githubusercontent.com/ShepherdCode/Soars2021/master/SimTools/plot_generator.py')\n",
+        "    with open('plot_generator.py', 'w') as f:\n",
         "      f. write(s.text)\n",
         "    from RNA_describe import *\n",
         "    from GenCodeTools import *\n",
-        "    from Plot_Generator import *\n",
+        "    from plot_generator import *\n",
         "except:\n",
         "    print(\"CoLab not working. On my PC, use relative paths.\")\n",
         "    IN_COLAB = False\n",
@@ -116,7 +116,7 @@
         "    sys.path.append(\"..\") # append parent dir in order to use sibling dirs\n",
         "    from SimTools.RNA_describe import *\n",
         "    from SimTools.GenCodeTools import *\n",
-        "    from SimTools.Plot_Generator import *\n",
+        "    from SimTools.plot_generator import *\n",
         "\n",
         "MODELPATH=\"BestModel\"  # saved on cloud instance and lost after logout\n",
         "#MODELPATH=DATAPATH+MODELPATH  # saved on Google Drive but requires login\n",
@@ -167,7 +167,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FwwunxFxL6Q-",
-        "outputId": "703fa082-c33b-46c7-c852-46f0984c940e"
+        "outputId": "b19bff39-2731-455b-c0ba-3e78b2ff0f48"
       },
       "source": [
         "# Full GenCode ver 38 human is 106143 pc + 48752 nc and loads in 7 sec.\n",
@@ -194,11 +194,11 @@
         {
           "output_type": "stream",
           "text": [
-            "2021-06-09 14:09:54 UTC\n",
+            "2021-06-09 14:38:32 UTC\n",
             "PC seqs loaded: 70825\n",
-            "2021-06-09 14:10:00 UTC\n",
+            "2021-06-09 14:38:37 UTC\n",
             "NC seqs loaded: 48752\n",
-            "2021-06-09 14:10:03 UTC\n"
+            "2021-06-09 14:38:39 UTC\n"
           ],
           "name": "stdout"
         }
@@ -211,7 +211,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7iW7zf4pL6Q_",
-        "outputId": "20c11387-b285-45a4-a5be-0ecdea8a1684"
+        "outputId": "4bac3488-eed8-4e70-c646-e8960b8e5bd8"
       },
       "source": [
         "print(\"Sorting PC...\")\n",
@@ -227,7 +227,7 @@
           "text": [
             "Sorting PC...\n",
             "Sorting NC...\n",
-            "2021-06-09 14:10:03 UTC\n"
+            "2021-06-09 14:38:39 UTC\n"
           ],
           "name": "stdout"
         }
@@ -290,12 +290,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "03eoMss5AIop",
-        "outputId": "35ab13f4-14c2-4158-9a47-607cab3b7402"
+        "outputId": "d9304afd-a79e-4d52-84fe-5fb25134f27e"
       },
       "source": [
-        "import matplotlib.pyplot as plt\n",
-        "import numpy as np\n",
-        "\n",
         "#Bin the RNA sequences\n",
         "binned_pc_sequences = []\n",
         "binned_nc_sequences = []\n",
@@ -312,7 +309,7 @@
         {
           "output_type": "stream",
           "text": [
-            "2021-06-09 14:10:04 UTC\n"
+            "2021-06-09 14:38:40 UTC\n"
           ],
           "name": "stdout"
         }
@@ -336,7 +333,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "TMMnTdSiL6RD",
-        "outputId": "f1f6d07d-31a4-4b6d-9e85-abf081fcf5c5"
+        "outputId": "8c7f532c-03b3-405a-d65f-55b776be4a58"
       },
       "source": [
         "pc_max_len_data = []\n",
@@ -376,7 +373,7 @@
         {
           "output_type": "stream",
           "text": [
-            "2021-06-09 14:11:16 UTC\n"
+            "2021-06-09 14:39:54 UTC\n"
           ],
           "name": "stdout"
         }
@@ -412,7 +409,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "8be46b83-da7c-46aa-c366-6163d6c1e88f"
+        "outputId": "0e113c64-b349-45db-aec9-b335b5875dab"
       },
       "source": [
         "#Get the means of all of the data\n",
@@ -436,7 +433,7 @@
         {
           "output_type": "stream",
           "text": [
-            "2021-06-09 14:11:16 UTC\n"
+            "2021-06-09 14:39:54 UTC\n"
           ],
           "name": "stdout"
         }
@@ -460,7 +457,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "K3xZCQfU8-yh",
-        "outputId": "dff157fc-1633-4d26-8bc3-bd502f8a80d8"
+        "outputId": "b0649f20-2fc9-47bb-a94a-ffc5673d2a19"
       },
       "source": [
         "pc_bin_sizes = []\n",
@@ -475,7 +472,7 @@
         {
           "output_type": "stream",
           "text": [
-            "2021-06-09 14:11:16 UTC\n"
+            "2021-06-09 14:39:54 UTC\n"
           ],
           "name": "stdout"
         }
@@ -498,9 +495,11 @@
         "id": "e_Gw5oEKOzc2"
       },
       "source": [
-        "\"\"\"Counts the number of RNA sequences that fit the given constraints.\n",
+        "\"\"\"\n",
+        "Counts the number of RNA sequences that fit the given constraints.\n",
         "Sequence range constraints are exclusive.\n",
-        "Max ORF length constraints are inclusive,\n",
+        "Max ORF length constraints are inclusive.\n",
+        "TODO: possibly optimize.\n",
         "\"\"\"\n",
         "def count_constraint_valid_sequences(data, min_seq_len, max_seq_len, min_max_orf_len, max_max_orf_len):\n",
         "  count = 0\n",
@@ -524,7 +523,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "a4huROzBJdLI",
-        "outputId": "1804894c-e11d-4638-d3a2-166a89d55d2f"
+        "outputId": "e35d4c68-2c68-49fc-9945-2eb01929809c"
       },
       "source": [
         "pc_no_orf_count = []\n",
@@ -543,7 +542,7 @@
         {
           "output_type": "stream",
           "text": [
-            "2021-06-09 14:13:45 UTC\n"
+            "2021-06-09 14:42:25 UTC\n"
           ],
           "name": "stdout"
         }
@@ -568,7 +567,7 @@
           "height": 1000
         },
         "id": "8GzgZJXqTPz1",
-        "outputId": "9be5367e-8e97-485b-c7af-1011a2d5fef2"
+        "outputId": "f03e6058-76c1-409f-a4ed-1a47d80b69a7"
       },
       "source": [
         "#Generate x-axis labels\n",
@@ -579,7 +578,7 @@
         "data_set_names = ['mRNA', 'lncRNA']\n",
         "\n",
         "#Set up plot generator\n",
-        "pg = Plot_Generator()\n",
+        "pg = PlotGenerator()\n",
         "pg.set_text_options(45, 'right', 0, 'center')\n",
         "\n",
         "#Bar plots\n",
