--- a/Notebooks/PlotGenerator_Demo_100.ipynb
+++ b/Notebooks/PlotGenerator_Demo_100.ipynb
@@ -220,7 +220,7 @@
         "id": "Oi35zr_LWJOb"
       },
       "source": [
-        "Generate box plot"
+        "Generate box plot comparing 2 data sets"
       ]
     },
     {
@@ -266,7 +266,7 @@
         "\n",
         "It does this automatically so all you need to provide is the name of each bin/subset and the name of each set.\n",
         "\n",
-        "It also color codes each data set. However, the number of colors is limited. So, by extension the number data sets you can compare is limited. \n",
+        "It also color codes each data set you are comparing. However, the number of colors is limited. So, by extension the number data sets you can compare is limited. \n",
         "\n",
         "Specifically, there are 10 colors so you can compare 10 data sets."
       ]
@@ -302,7 +302,7 @@
         "id": "pXKQ_O0AiWJD"
       },
       "source": [
-        "Generate bar plot"
+        "Generate bar plot comparing 3 data sets"
       ]
     },
     {
