Run CNN+RNN on RNA length 128.

--- a/Notebooks/ConvRecur_110.ipynb
+++ b/Notebooks/ConvRecur_110.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "# ORF recognition by Convolutional/Recurrent\n",
     "\n",
-    "Test CNN+GRU 32 on simulated RNA of length 64. \n",
+    "Test CNN+LSTM 32 on simulated RNA of length 128. \n",
     "\n",
     "Use restructured codebase from notebook 105."
    ]
@@ -59,8 +59,8 @@
     "NC_SEQUENCES=32000   # how many non-coding sequences\n",
     "PC_TESTS=1000\n",
     "NC_TESTS=1000\n",
-    "RNA_LEN=64            # how long is each sequence\n",
-    "CDS_LEN=32            # min CDS len to be coding\n",
+    "RNA_LEN=128            # how long is each sequence\n",
+    "CDS_LEN=64            # min CDS len to be coding\n",
     "ALPHABET=4          # how many different letters are possible\n",
     "INPUT_SHAPE_2D = (RNA_LEN,ALPHABET,1) # Conv2D needs 3D inputs\n",
     "INPUT_SHAPE = (RNA_LEN,ALPHABET) # Conv1D needs 2D inputs\n",
