Remove uneeded code and do small optimizations.

--- a/Notebooks/GenCode_Explore_212.ipynb
+++ b/Notebooks/GenCode_Explore_212.ipynb
@@ -294,7 +294,6 @@
         "for b in range(1, NUM_BINS + 1):\n",
         "  bin = (2 ** (b) * BINNING_SCALE, 2 ** (b + 1) * BINNING_SCALE)\n",
         "  bins.append(bin)\n",
-        "NUM_BINS = len(bins)\n",
         "print('Bins generated:', bins)\n",
         "show_time()"
       ],
@@ -328,15 +327,15 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "30fbbe56-1e65-453a-abd6-fe604c86ec23"
+        "outputId": "86972dec-fa94-45e4-b185-1aba0778ba46"
       },
       "source": [
         "random.seed(REPRODUCABILITY_SEED)\n",
         "sim_pc_sequences = []\n",
         "sim_nc_sequences = []\n",
         "for bin in bins:\n",
-        "  seq_len = (bin[0] + bin[1]) // 2\n",
-        "  cds_len = seq_len // 2\n",
+        "  seq_len = (bin[0] + bin[1]) >> 1 #integer division using // apparently still calculates remainder, source: https://stackoverflow.com/questions/37053379/times-two-faster-than-bit-shift-for-python-3-x-integers\n",
+        "  cds_len = seq_len >> 1 #So instead use right bit shift\n",
         "  print('Sequence length:',seq_len)\n",
         "  rbo = Random_Base_Oracle(seq_len, debug=True)\n",
         "  temp_pc, temp_nc = rbo.get_partitioned_sequences(cds_len, NUMBER_OF_SIM_SEQUENCES_PER_BIN)\n",
@@ -346,7 +345,7 @@
         "print('lncRNA sequences generated:', NUMBER_OF_SIM_SEQUENCES_PER_BIN * NUM_BINS)\n",
         "show_time()"
       ],
-      "execution_count": 8,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -359,7 +358,7 @@
             "It took 86360 trials to reach 50 per class.\n",
             "mRNA sequences generated: 150\n",
             "lncRNA sequences generated: 150\n",
-            "2021-06-23 16:34:06 UTC\n"
+            "2021-06-23 17:23:45 UTC\n"
           ],
           "name": "stdout"
         }
@@ -757,15 +756,6 @@
             "needs_background": "light"
           }
         }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "YWM3UVGjCIT7"
-      },
-      "source": [
-        ""
       ]
     },
     {
